Touch Scrolling In Listview Activates Rows
Steps to reproduce
- Have a touchscreen
- Use GtkListView
- Have an action run when a row is activated, e.g. changing the view
- Try to scroll the GtkListView with your touchscreen
Current behavior
The listview will activate the row touched when trying to scroll
Expected outcome
The listview knows the difference between scrolling and activating an entry.
Version information
GTK 3.99.4-51-gb966f593